Big change to single workbook

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "defaultimport": "C:\\Users\\ee-student-lab\\Downloads",
-  "excelfile": "C:\\Users\\ee-student-lab\\OneDrive - Cal Poly\\Documents\\Lab Form Database\\EquipmentLoan.xlsx",
+  "excelfile": "C:\\Users\\ee-student-lab\\OneDrive - Cal Poly\\Documents\\Lab Form Database\\Lab Form Database.xlsx",
   "saveas": "C:\\Users\\ee-student-lab\\OneDrive - Cal Poly\\Documents\\Lab Form Database\\PDFs"
 }
